--- a/index.html
+++ b/index.html
@@ -20,22 +20,31 @@
     <footer id="footer">
       <ul class="icons">
         <li>
-          <a href="#" class="icon brands fa-twitter"
+          <a
+            href="https://twitter.com/a_partinc"
+            target="_blank"
+            class="icon brands fa-twitter"
             ><span class="label">Twitter</span></a
           >
         </li>
         <li>
-          <a href="#" class="icon brands fa-instagram"
+          <a
+            href="https://www.instagram.com/apartinc/?hl=en"
+            target="_blank"
+            class="icon brands fa-instagram"
             ><span class="label">Instagram</span></a
           >
         </li>
         <li>
-          <a href="#" class="icon brands fa-github"
+          <a
+            href="https://www.facebook.com/apartinc/"
+            target="_blank"
+            class="icon brands fa-github"
             ><span class="label">GitHub</span></a
           >
         </li>
         <li>
-          <a href="#" class="icon fa-envelope"
+          <a href="mailto:info@apart.to" target="_top" class="icon fa-envelope"
             ><span class="label">Email</span></a
           >
         </li>
